[gd_scene format=3 uid="uid://r5ns0ldrqmd3"]

[ext_resource type="Script" uid="uid://eyms1nmcxqs3" path="res://scripts/shmup_game/shmup_game_layer.gd" id="1_nwjd4"]
[ext_resource type="Script" uid="uid://iru4e87kcgfl" path="res://scripts/tile_scale_container.gd" id="2_elb1r"]
[ext_resource type="Texture2D" uid="uid://c8q44nhppqi4" path="res://sprites/Background-npr.png" id="3_po8c3"]
[ext_resource type="FontFile" uid="uid://cqaiaflnj0gq7" path="res://Gaegu-Bold.ttf" id="4_bhvut"]
[ext_resource type="Texture2D" uid="uid://cu4i38h0ccc2t" path="res://sprites/uis/d-pad.png" id="4_elb1r"]
[ext_resource type="Texture2D" uid="uid://bqhtgtucbn8g8" path="res://sprites/uis/button.png" id="5_po8c3"]
[ext_resource type="Texture2D" uid="uid://os5hxlton3ao" path="res://sprites/uis/x.PNG" id="6_beoo5"]
[ext_resource type="Script" uid="uid://7uua8e7ednvp" path="res://scripts/input_key_label.gd" id="7_po8c3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_umkka"]

[sub_resource type="LabelSettings" id="LabelSettings_po8c3"]
font = ExtResource("4_bhvut")
font_size = 43
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bhvut"]
font = ExtResource("4_bhvut")
font_size = 32
font_color = Color(0.37109375, 0.37109375, 0.37109375, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hww0e"]
font = ExtResource("4_bhvut")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nvq2b"]
font = ExtResource("4_bhvut")
font_size = 42
font_color = Color(0, 0, 0, 1)

[node name="ShmupGameLayer" type="CanvasLayer" unique_id=32325962]
script = ExtResource("1_nwjd4")

[node name="Control" type="Control" parent="." unique_id=319613499]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="Control" unique_id=71279293]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control" unique_id=557485806]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -418.0
offset_top = -248.0
offset_right = 418.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_umkka")

[node name="TileScaleContainer" type="Container" parent="Control/Panel" unique_id=521044501]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_elb1r")
tile_scale = 0.785
metadata/_custom_type_script = "uid://iru4e87kcgfl"

[node name="NinePatchRect" type="NinePatchRect" parent="Control/Panel/TileScaleContainer" unique_id=694661654]
layout_mode = 2
texture = ExtResource("3_po8c3")
patch_margin_left = 81
patch_margin_top = 55
patch_margin_right = 70
patch_margin_bottom = 39

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel" unique_id=371322108]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = 71.0
offset_right = -21.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="GridContainer" parent="Control/Panel/MarginContainer" unique_id=1396522507]
layout_mode = 2
columns = 2

[node name="Control" type="Control" parent="Control/Panel/MarginContainer/HBoxContainer" unique_id=937928841]
custom_minimum_size = Vector2(390.125, 360)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/Panel/MarginContainer/HBoxContainer/Control" unique_id=549603143]
layout_mode = 0
offset_left = 43.0
offset_top = 53.0
offset_right = 208.0
offset_bottom = 233.0
texture = ExtResource("4_elb1r")

[node name="TextureRect2" type="TextureRect" parent="Control/Panel/MarginContainer/HBoxContainer/Control" unique_id=538515371]
layout_mode = 0
offset_left = 205.0
offset_top = 53.0
offset_right = 370.0
offset_bottom = 233.0
texture = ExtResource("5_po8c3")

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer/Control" unique_id=466544632]
custom_minimum_size = Vector2(300, 0)
layout_mode = 0
offset_left = -28.0
offset_top = 272.0
offset_right = 272.0
offset_bottom = 305.0
text = "Move"
label_settings = SubResource("LabelSettings_po8c3")
horizontal_alignment = 1

[node name="Shoot" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer/Control" unique_id=1054214326]
custom_minimum_size = Vector2(300, 0)
layout_mode = 0
offset_left = 136.0
offset_top = 272.0
offset_right = 436.0
offset_bottom = 305.0
text = "Shoot"
label_settings = SubResource("LabelSettings_po8c3")
horizontal_alignment = 1

[node name="ActionButton" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer/Control" unique_id=245599257]
custom_minimum_size = Vector2(300, 0)
layout_mode = 0
offset_left = 136.0
offset_top = 212.0
offset_right = 436.0
offset_bottom = 245.0
text = "Shoot"
label_settings = SubResource("LabelSettings_bhvut")
horizontal_alignment = 1
script = ExtResource("7_po8c3")
action = "Space"

[node name="ActionButton2" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer/Control" unique_id=1686957116]
custom_minimum_size = Vector2(300, 0)
layout_mode = 0
offset_left = -27.0
offset_top = 38.0
offset_right = 273.0
offset_bottom = 71.0
text = "Z"
label_settings = SubResource("LabelSettings_bhvut")
horizontal_alignment = 1
script = ExtResource("7_po8c3")
action = "Up"

[node name="ActionButton3" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer/Control" unique_id=2011608668]
custom_minimum_size = Vector2(300, 0)
layout_mode = 0
offset_left = -27.0
offset_top = 207.0
offset_right = 273.0
offset_bottom = 240.0
text = "Down"
label_settings = SubResource("LabelSettings_bhvut")
horizontal_alignment = 1
script = ExtResource("7_po8c3")
action = "Down"

[node name="ActionButton4" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer/Control" unique_id=1273418242]
custom_minimum_size = Vector2(300, 0)
layout_mode = 0
offset_left = -104.0
offset_top = 96.0
offset_right = 196.0
offset_bottom = 129.0
text = "Left"
label_settings = SubResource("LabelSettings_bhvut")
horizontal_alignment = 1
script = ExtResource("7_po8c3")
action = "Left"

[node name="ActionButton5" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer/Control" unique_id=1316809680]
custom_minimum_size = Vector2(300, 0)
layout_mode = 0
offset_left = 43.0
offset_top = 96.0
offset_right = 343.0
offset_bottom = 129.0
text = "Right"
label_settings = SubResource("LabelSettings_bhvut")
horizontal_alignment = 1
script = ExtResource("7_po8c3")
action = "Right"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer/HBoxContainer" unique_id=310459580]
custom_minimum_size = Vector2(390.125, 360)
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1429159632]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer" unique_id=641379000]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Player Health"
label_settings = SubResource("LabelSettings_hww0e")

[node name="PlayerHealthSlider" type="HSlider" parent="Control/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer" unique_id=661609245]
layout_mode = 2

[node name="HBoxContainer2" type="VBoxContainer" parent="Control/Panel/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1954324578]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2" unique_id=1463533820]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Player fire rate"
label_settings = SubResource("LabelSettings_hww0e")

[node name="PlayerFireRateSlider" type="HSlider" parent="Control/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2" unique_id=996377111]
layout_mode = 2

[node name="HBoxContainer3" type="VBoxContainer" parent="Control/Panel/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1238217889]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3" unique_id=404032384]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Player speed"
label_settings = SubResource("LabelSettings_hww0e")

[node name="PlayerSpeedSlider" type="HSlider" parent="Control/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3" unique_id=670451548]
layout_mode = 2

[node name="HBoxContainer4" type="VBoxContainer" parent="Control/Panel/MarginContainer/HBoxContainer/VBoxContainer" unique_id=420705366]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer4" unique_id=1993478879]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Enemies spawn speed"
label_settings = SubResource("LabelSettings_hww0e")

[node name="SpawnSpeedSlider" type="HSlider" parent="Control/Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer4" unique_id=1541032858]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel" unique_id=82163116]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -159.5
offset_top = 19.0
offset_right = 159.5
offset_bottom = 62.0
grow_horizontal = 2
text = "Shoot 'Em Up !"
label_settings = SubResource("LabelSettings_nvq2b")
horizontal_alignment = 1

[node name="QuitButton" type="TextureButton" parent="Control" unique_id=939337690]
modulate = Color(0.87109375, 0.25520325, 0.25520325, 1)
layout_mode = 0
offset_left = 854.0
offset_top = 89.0
offset_right = 917.0
offset_bottom = 152.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_beoo5")
ignore_texture_size = true
stretch_mode = 5
